# BusinessWorld

./: .env.example  .gitignore  .jarvis-expand-task.md  .jarvis-expand2-task.md  .jarvis-expand3-task.md  _analyze_tone.js  _build_compact_graph.js  _classify_22_mechanisms.js  _classify_shorts.js  _cluster_principles.js  _create_davinci_stack_note.js  _extract_principles.js  _generate_ideas_v3.js  _generate_v3.js  _generate_zeigarnik_mechanisms.js  _match_by_transcript.js  _match_channel_to_pen.js  _merge_idea_video_fields.js  _r2_check2.js  _r2_check_counts.js  _render_principles_friendly.js  _watcher_r2_live.js  _watcher_restart.sh  _write_doc2.js  _write_doc2_v2.js  access-registry.js  add_steered_proj.py  add_steered_proj_long.py  analyze_transactions.py  auth-gate.js  auth.js  build_creator_titles.py  build_study.py  build_study_long.py  build_thumb_assets.py  claude_rtg_score.py  cloud-storage.js  config.example.js  config.js  crawler-watchdog.sh  (+58 more)
StorageAI/: README.md  main.py  pyproject.toml  requirements.txt
StorageAI/src/: __init__.py  app.py  config.py
StorageAI/src/domain/: canonicalize.py  models.py
StorageAI/src/nlu/: answer_align.py  multi_intent.py  parse_intent.py  whisper_io.py
StorageAI/src/services/: gpt_service.py  inventory.py  sorting_logic.py  speech.py
StorageAI/src/storage/: airtable_client.py
StorageAI/src/ui/: main_window.py
StorageAI/src/util/: idgen.py
StorageAI/src/vector/: embedder.py  pinecone_index.py  search.py
buildings/: building-registry.js  egg-renderer.js  html-utils.js  notion-helpers.js  video-service.js
(+575 files in other folders)
